--- a/lib/CPAN/Nearest.pod.tmpl
+++ b/lib/CPAN/Nearest.pod.tmpl
@@ -18,4 +18,10 @@ Search the package detail file C<$file> for a module named
 C<$module_name> and return the closest name. E.g. if you search for
 "Harry::Potter", the closest module is "Data::Lotter".
 
+The file specified by the first argument, C<$file> in the example, is
+usually found at F<~/.cpan/sources/modules/02packages.details.txt.gz>
+on a Unix-like system. This may be specified as the file name. To
+retrieve the results faster, specify an uncompressed version of this
+file.
+
 [% INCLUDE "author" %]
