Update for new Text::Fuzzy.

--- a/lib/CPAN/Nearest.pod.tmpl
+++ b/lib/CPAN/Nearest.pod.tmpl
@@ -41,7 +41,7 @@ CPAN::Nearest supplies a spelling-mistake tolerant search for the most
 similar name, intended for people making tools like C<cpan>, C<cpanm>,
 C<pm-uninstall>, and anything else which needs to use the CPAN
 packages list. CPAN::Nearest was written to be fast enough for
-practical use, and without dependencies.
+practical use.
 
 CPAN::Nearest was inspired by the helpful "git" version control
 system, which provides suggestions for spelling mistakes.
