Tests and documentation

--- a/lib/CPAN/Nearest.pod.tmpl
+++ b/lib/CPAN/Nearest.pod.tmpl
@@ -82,6 +82,8 @@ L</search> is exported on demand.
 
 =over
 
+=item L<Carp>
+
 =item Text::Fuzzy
 
 L<Text::Fuzzy> is used to do the searches of the CPAN data. See
@@ -90,6 +92,17 @@ L</HISTORY>.
 =item Gzip::Faster
 
 L<Gzip::Faster> is used to process compressed package files.
+
+=head1 SEE ALSO
+
+=over
+
+=item L<fatfinger>
+
+This looks for similarly-named modules via
+L<Text::Levenshtein::Damerau>.
+
+=back
 
 =head1 FILES
 
